# SOI-filesystem

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: linux.yml
docs/: concept.md
include/: help.h  vfs.h
include/vfs/: block.h  def.h  dentry.h  inode.h  operations.h  super_block.h
src/: help.c  main.c  new_vfs.c
src/vfs/: copy.c  delete.c  delete_vfs.c  disk.c  new.c  new_vfs.c  print.c  remove.c  remove_from_vfs.c  stats.c  super_block.c
tests/: test_copy_remove.sh  test_multiple_copies.sh  test_new_delete.sh  test_print.sh  test_self_copy_remove.sh  tests.sh
tests/messages/: msg1.txt  msg2.txt  msg3.txt
